# pegasus-frontend

./: CMakeLists.txt
assets/: CMakeLists.txt
cmake/: PegasusCommonProps.cmake  PegasusTargetPlatform.cmake
src/app/: CMakeLists.txt  main.cpp
src/backend/: AppSettings.cpp  CMakeLists.txt  Log.cpp  PegasusAssets.cpp  PreInit.cpp  ProcessLauncher.cpp
src/backend/imggen/: BlurhashProvider.cpp
src/backend/model/internal/: GamepadManagerSDL2.cpp
src/backend/model/internal/settings/: Themes.cpp
src/backend/model/memory/: Memory.cpp
src/backend/parsers/: MetaFile.cpp  SettingsFile.cpp
src/backend/providers/: JsonCacheUtils.cpp
src/backend/providers/es2/: Es2Metadata.cpp  Es2Systems.cpp
src/backend/providers/gog/: GogMetadata.cpp  GogProvider.cpp
src/backend/providers/pegasus_favorites/: Favorites.cpp
src/backend/providers/pegasus_metadata/: PegasusMedia.cpp  PegasusUtils.cpp
src/backend/providers/skraper/: SkraperAssetsProvider.cpp
src/backend/utils/: CommandTokenizer.cpp
